# project

./: .gitignore  FRONTEND_BACKEND_TROUBLESHOOTING.md  PROJECT_STATUS.md  check_db.js  check_db.py  package-lock.json
backend/: CREATORS_API.md  Cargo.toml  Dockerfile  README.md  add_sample_data.sql  add_sample_data_complete.sql  env.example  railway.toml  test_creators_api.sh
backend/src/: auth.rs  config.rs  database.rs  main.rs  middleware.rs  models.rs
backend/src/routes/: articles.rs  auth.rs  campaigns.rs  creators.rs  events.rs  mod.rs  podcasts.rs  posts.rs  products.rs  users.rs
frontend/: .dockerignore  .env.example  .env.local.example  .eslintignore  .eslintrc.js  .vercel-rebuild  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/campaigns/[slug]/: page.tsx
frontend/app/campaigns/create/: page.tsx
frontend/app/creator-dashboard/: page.tsx
frontend/app/creator-dashboard/analytics/: page.tsx
frontend/app/creators/: page.tsx
frontend/app/creators/me/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/events/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/feed/: page.tsx
frontend/app/purchases/: page.tsx
frontend/app/subscriptions/: page.tsx
frontend/components/: EventPaymentModal.tsx  MediaUpload.tsx  Navbar.tsx  RichTextEditor.tsx  SocialShare.tsx  TierCard.tsx
frontend/components/articles/: ArticleCard.tsx
frontend/components/downloads/: DownloadCard.tsx
frontend/components/events/: EventCard.tsx
frontend/components/feed/: FeedItemCard.tsx
frontend/components/goals/: CreateGoalModal.tsx  GoalCard.tsx  GoalsList.tsx
frontend/components/messages/: MessageList.tsx
frontend/components/podcast/: AudioPlayer.tsx
frontend/components/polls/: CreatePollModal.tsx  PollCard.tsx  PollsList.tsx
frontend/components/products/: ProductCard.tsx  ProductCollections.tsx  ProductForm.tsx
frontend/components/ui/: 3d-card.tsx  aurora-background.tsx  blur-fade.tsx  button.tsx  card.tsx  label.tsx  marquee.tsx  moving-border.tsx  progress.tsx  spotlight-input.tsx  spotlight.tsx  switch.tsx  text-generate-effect.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts  config.ts  generateTicketPDF.ts  stripe.ts  types.ts  utils.ts
frontend/lib/api/: creatorPost.ts  digitalProducts.ts  referral.ts  subscription.ts
frontend/lib/utils/: mediaUrl.ts
frontend/types/: referral.ts  subscription.ts
(+37 files in other folders)
